--- a/style/style.css
+++ b/style/style.css
@@ -84,8 +84,9 @@
 }
 
 .app-picture img{
+    max-width: 100%;
     width: 50%;
-    height: 85%;
+    height: auto;
     margin-top: -20px;
     padding-left: 150px;
 }
