Revert "Update style.css"
This reverts commit e1ef41129c9b3286868efc5ddef320ea12e1eca9.

--- a/style/style.css
+++ b/style/style.css
@@ -84,9 +84,8 @@
 }
 
 .app-picture img{
-    max-width: 100%;
     width: 50%;
-    height: auto;
+    height: 85%;
     margin-top: -20px;
     padding-left: 150px;
 }
